# LaboratorioRedes-1

./: CMakeLists.txt  README.md
include/: cryptoUtils.hpp  tcpClient.hpp  tcpServer.hpp  utils.hpp
src/: client.cpp  decrypt.cpp  server.cpp
src/libs/: cryptoUtils.cpp  tcpClient.cpp  tcpServer.cpp  utils.cpp
